--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap');
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Open Sans', 'sans-serif';
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  background: #f4f4f4;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+* {
+  -webkit-transition: margin-left .2s ease-in-out;
+  -moz-transition: margin-left .2s ease-in-out;
+  -o-transition: margin-left .2s ease-in-out;
+  transition: margin-left .2s ease-in-out;
+}
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: green;
+  border-radius: 5px;
+}
+
+button {
+  &:disabled {
+    cursor: not-allowed !important;
+  }
+}
+
+textarea {
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 10rem;
+  min-height: 10rem;
+  border-radius: .3rem;
+  font-size: 1.1rem;
+  padding: .8rem;
+  border: 1px solid #CED4DA;
+  color: #636363;
+  margin-bottom: .3rem;
+
+  &:focus {
+    outline: none;
+  }
+}
+
