create voucher component, add auth guard, add signin feature

--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -9,8 +9,8 @@
     h2 {
       text-transform: uppercase;
       padding: .7rem 2rem;
-      color: #858585;
-      background: rgb(50, 27, 20);
+      color: #ffffff;
+      background: #565867;
       font-size: .9rem;
       border-radius: .2rem;
       font-weight: bold;
