--- a/src/app/components/voucher/voucher.component.html
+++ b/src/app/components/voucher/voucher.component.html
@@ -1,1 +1,70 @@
-<p>voucher works!</p>
+<div class="voucher-main">
+  <div class="header voucher-header">
+    <span>
+      <h2>Vouchers</h2>
+      <small>**Click on the Add Voucher Button to add a Voucher</small>
+    </span>
+    <button class="btn-success" type="button" (click)="dialogService.showDialog = true">Add Voucher</button>
+    <app-dialog *ngIf="dialogService.showDialog" [dialogTitle]="'Add Voucher'"
+                [showActionArea]="false" (clearDialog)="closeDialog($event)">
+      <div class="voucher-content">
+        <form [formGroup]="voucherForm" (ngSubmit)="onSubmit()">
+          <app-text-input formControlName="title" [label]="'Title'"></app-text-input>
+          <app-text-input formControlName="discount" [label]="'Discount'" [type]="'number'"></app-text-input>
+          <app-text-input formControlName="maxUse" [label]="'Maximum Use'" [type]="'number'"></app-text-input>
+          <div class="type-value" formGroupName="expiresAfter">
+            <div class="type-content">
+              <label for="type">Duration Type</label>
+              <select formControlName="type">
+                <option value="" disabled selected hidden>Choose Type...</option>
+                <option *ngFor="let option of typeOptions" ngValue="{{option.value}}" id="type">{{option.name}}</option>
+              </select>
+              <small class='text-error' *ngIf='!expiresAfterFG.valid && expiresAfterFG.get("type")?.touched'>
+                <span *ngIf="expiresAfterFG.get('type')?.errors?.['required']">*Duration Type is required</span>
+              </small>
+            </div>
+            <app-text-input formControlName="value" [label]="'Value'" [type]="'number'"></app-text-input>
+          </div>
+          <div class="form-footer">
+            <button class="btn-primary" type="submit" [disabled]="voucherForm.invalid || isSubmitting">Confirm</button>
+          </div>
+        </form>
+      </div>
+    </app-dialog>
+  </div>
+  <div class="content voucher-content">
+    <app-table-header [tableHeader]="'Vouchers present in the System'" [selectLabel]="'Voucher Status'"
+                      (statusValue)="onStatusChange($event)">
+    </app-table-header>
+    <table>
+      <thead>
+      <tr>
+        <th>Voucher</th>
+        <th>Discount (%)</th>
+        <th>Usage Count</th>
+        <th>Max Use</th>
+        <th>Expires On</th>
+        <th>Created On</th>
+        <th class="actions">Actions</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let voucher of pagedList?.items">
+        <td>{{voucher.voucher}}</td>
+        <td>{{voucher.discount}}</td>
+        <td>{{voucher.useCount}}</td>
+        <td>{{voucher.maxUse}}</td>
+        <td>{{voucher.expiresOn | date: 'MMM d, y HH:mm'}}</td>
+        <td>{{voucher.createdAt | date: 'MMM d, y HH:mm'}}</td>
+        <td class="action-btn">
+          <app-action-button [item]="voucher"></app-action-button>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    <app-table-pager [pageSize]="pagedList.metaData.pageSize" [totalCount]="pagedList.metaData.totalCount"
+                     [pageNo]="pagedList.metaData.pageNo" *ngIf="pagedList?.items"
+                     [totalPages]="pagedList.metaData.totalPages" (pageChanged)="onPageChange($event)">
+    </app-table-pager>
+  </div>
+</div>
