--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,4 +1,3 @@
-$sidebar-background: linear-gradient(90deg, rgb(50, 27, 20) 0%, rgb(40, 23, 13) 90%);
 .dashboard {
   display: flex;
   position: fixed;
@@ -8,7 +7,7 @@ $sidebar-background: linear-gradient(90deg, rgb(50, 27, 20) 0%, rgb(40, 23, 13) 
 
   .sidebar {
     width: 300px;
-    background: $sidebar-background;
+    background-image: linear-gradient(235deg, #565867, #191a25);
     box-shadow: 0 6px 10px -2px rgba(0, 0, 0, .75);
     height: calc(100vh - 70px);
     left: 0;
@@ -19,7 +18,7 @@ $sidebar-background: linear-gradient(90deg, rgb(50, 27, 20) 0%, rgb(40, 23, 13) 
 
   .sidebar-min, .collapse {
     width: 5rem;
-    background: $sidebar-background;
+    background-image: linear-gradient(235deg, #565867, #191a25);
     transition: opacity 1s ease-out;
     height: calc(100vh - 70px);
     overflow-y: scroll;
@@ -28,10 +27,8 @@ $sidebar-background: linear-gradient(90deg, rgb(50, 27, 20) 0%, rgb(40, 23, 13) 
 
   .content {
     top: 70px;
-    padding: 1rem;
     width: calc(100vw - 300px);
     height: calc(100vh - 70px);
-    text-align: justify;
     overflow-y: auto;
 
     @media screen and (max-width: 768px) {
