--- a/src/app/shared/text-input/text-input.component.scss
+++ b/src/app/shared/text-input/text-input.component.scss
@@ -18,6 +18,10 @@
       background: #dcdcdc;
     }
 
+    &:disabled{
+      cursor: not-allowed;
+    }
+
     @media screen and (max-width: 568px) {
       font-size: .9rem;
     }
