--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -7,7 +7,7 @@
     <ng-content></ng-content>
   </div>
   <div class="dialog-actions" *ngIf="showActionArea === true">
-    <button type="button" class="btn-error" (click)="hideDialog()">Cancel</button>
-    <button type="button" class="btn-success">Confirm</button>
+    <button type="button" class="btn-error" (click)="closeDialog()">No</button>
+    <button type="button" class="btn-success" (click)="performAction()">Yes</button>
   </div>
 </div>
