--- a/src/app/shared/text-input/text-input.component.html
+++ b/src/app/shared/text-input/text-input.component.html
@@ -1,7 +1,7 @@
 <div class="input-content">
   <label for='{{label}}'>{{label}}</label>
   <input [type]="type" (input)="onChange($any($event.currentTarget).value)" id='{{label}}' (blur)="onTouched()" #input
-         placeholder="{{label}}" [readOnly]="isReadOnly" [min]="min" [max]="max">
+         placeholder="{{label}}" [readOnly]="isReadOnly" [min]="min" [max]="max" [disabled]="enabled">
   <small class='text-error'
          *ngIf='(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.touched)'>
     <span *ngIf="controlDir.control.errors?.['required']">*{{label}} is required</span>
