--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -1,6 +1,6 @@
 <div class="dialog-container">
   <div class="dialog-header">
-    {{dialogTitle}}
+    <h3>{{dialogTitle}}</h3>
     <span (click)="closeDialog()">&times;</span>
   </div>
   <div class="dialog-content">
