--- a/src/app/components/voucher/voucher.component.scss
+++ b/src/app/components/voucher/voucher.component.scss
@@ -5,7 +5,6 @@
 
   &-content {
     width: 100%;
-    //overflow-x: auto;
   }
 
   &-header {
@@ -25,6 +24,10 @@
       }
     }
 
+    button{
+      border-radius: 2rem;
+    }
+
     @media screen and (max-width: 512px) {
       flex-direction: column;
       align-items: flex-start;
@@ -41,22 +44,22 @@
   color: white;
   text-align: center;
 
-  span {
+  small {
     font-weight: bold;
-    padding: .4rem 1rem;
-    font-size: .8rem;
+    padding: .3rem .8rem;
+    font-size: .7rem;
     border-radius: 1rem;
   }
 }
 
 .expired {
-  span {
+  small {
     background: red;
   }
 }
 
 .unexpired {
-  span {
+  small {
     background: #28a745;
   }
 }
