--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,11 +1,34 @@
 <div class="nav">
   <div class="nav-container">
-    <div class="nav-right">
+    <div class="nav-left">
       <div class="nav-logo" routerLink="/" *ngIf="windowWidth > 768">
         <img src="/assets/logo.svg" alt="logo">
       </div>
       <div class="nav-menu-icon" (click)="toggleMenu()" *ngIf="windowWidth <= 768">
         <fa-icon [icon]="menuIcon" class="fa-xl"></fa-icon>
+      </div>
+    </div>
+    <div class="nav-center"></div>
+    <div class="nav-right">
+      <div class="action-icon" (click)="showAction()">
+        <fa-icon [icon]="accountIcon" class="fa-xl"></fa-icon>
+      </div>
+      <div class="account-action" *ngIf="isShown">
+        <h4 style="text-align: center">SignedIn as:</h4>
+        <hr>
+        <p style="font-weight: bold">
+          <fa-icon [icon]="user" class="fa-xl"></fa-icon>
+          {{(user$ | async)?.name}}
+        </p>
+        <p style="color: #007bff;text-decoration: underline;">
+          <fa-icon [icon]="email" class="fa-xl"></fa-icon>
+          {{(user$ | async)?.email}}
+        </p>
+        <hr>
+        <p class="sign-out" (click)="signOutUser()">
+          <fa-icon [icon]="signOut" class="fa-xl"></fa-icon>
+          SignOut
+        </p>
       </div>
     </div>
   </div>
