--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -16,26 +16,97 @@
     align-items: center;
   }
 
-  &-right{
+  &-left {
     width: 300px;
     display: flex;
     align-items: center;
     padding: 0 1rem;
   }
 
-  &-logo{
+  &-logo {
     cursor: pointer;
     padding-left: 1rem;
 
-    img{
+    img {
       width: 120px;
       height: 100%;
     }
   }
-  &-menu-icon{
+
+  &-menu-icon {
     margin-left: .5rem;
     font-size: 1.2rem;
     color: #636363;
     cursor: pointer;
+  }
+
+  &-center {
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+  }
+
+  &-right {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: .5rem;
+    position: relative;
+
+    .action-icon {
+      .ng-fa-icon {
+        background: #cccccc;
+        cursor: pointer;
+        padding: 1.1rem;
+        border-radius: 50%;
+        border: 1px solid #cccccc;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    .account-action {
+      position: absolute;
+      padding: 1rem;
+      box-shadow: 5px 5px 4px rgba(19, 19, 19, .2);
+      background-color: white;
+      right: .7rem;
+      top: 70px;
+      width: 220px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+
+      p {
+        padding: .8rem 0;
+
+        .ng-fa-icon {
+          margin-right: 1rem;
+          font-size: 1rem;
+          color: #636363;
+          border-radius: 50%;
+          border: none;
+          background: #cccccc;
+          padding: .3rem .5rem;
+        }
+      }
+
+      hr {
+        margin: 1rem 0;
+      }
+    }
+  }
+}
+
+.sign-out {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1rem;
+
+  &:hover {
+    background: #cccccc;
+    border-radius: .4rem;
   }
 }
