--- a/src/app/shared/table-header/table-header.component.scss
+++ b/src/app/shared/table-header/table-header.component.scss
@@ -1,34 +1,35 @@
 .table-header {
-  display: flex;
-  align-items: center !important;
-
-  p {
-    margin-bottom: 1rem;
-    font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  display: grid;
+  align-items: center;
+  grid-template-columns: .5fr 2fr .7fr;
+  gap: 3rem;
 
   .header-content {
     margin-left: auto;
     display: flex;
     align-items: center;
     padding: .5rem 0;
+    width: 100%;
 
-    label {
-      margin-right: 1rem;
-      font-weight: bold;
-    }
+    form {
+      width: 100%;
 
-    select {
-      min-width: 5rem;
-      font-size: 1rem;
-      padding: .5rem 1rem;
-      border-radius: .3rem;
+      label {
+        margin-right: 1rem;
+        font-weight: bold;
+      }
 
-      @media screen and (max-width: 378px) {
+      select {
         width: 100%;
-        margin-top: .5rem;
+        font-size: 1rem;
+        padding: .5rem 1rem;
+        border-radius: .3rem;
+        color: #636363;
+
+        @media screen and (max-width: 378px) {
+          width: 100%;
+          margin-top: .5rem;
+        }
       }
     }
 
@@ -39,11 +40,108 @@
     }
   }
 
-  @media screen and (max-width: 828px) {
-    flex-direction: column;
+  @media screen and (max-width: 1448px) {
+    grid-template-columns: .7fr 2fr .7fr;
+  }
+
+  @media screen and (max-width: 1312px) {
+    grid-template-columns: 1fr;
+    gap: .5rem;
 
     .header-content {
-      margin-right: auto;
+      width: 100%;
+
+      form {
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        label {
+          min-width: 7rem;
+        }
+
+        select {
+          width: 100%;
+        }
+      }
+    }
+
+    .table-title {
+      grid-template-columns: 1fr 3fr;
+    }
+  }
+
+  @media screen and (max-width: 828px) {
+    .table-title {
+      grid-template-columns: 1fr 2fr;
+    }
+  }
+
+  @media screen and (max-width: 512px) {
+    .table-title {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  @media screen and (max-width: 378px) {
+    .table-title {
+      grid-template-columns: 1fr;
+    }
+  }
+}
+
+.table-title {
+  width: 100%;
+  padding: .5rem 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  align-items: center;
+
+  span {
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display: block;
+    margin-right: 1rem;
+    width: 100%;
+  }
+
+  select {
+    width: 100%;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    border-radius: .3rem;
+    color: #636363;
+  }
+}
+
+.search-area {
+  display: flex;
+  align-items: center;
+  padding: .5rem 0;
+
+  form {
+    position: relative;
+    width: 100%;
+
+    input {
+      width: 100%;
+      padding: .7rem;
+      border-radius: 2rem;
+      border: 1px solid #636363;
+      color: #212529;
+    }
+
+    button {
+      position: absolute;
+      border-top-right-radius: 2rem;
+      border-bottom-right-radius: 2rem;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      border: none;
     }
   }
 }
