add delivery method component, add logic for crud operations for delivery methods

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,72 +1,72 @@
-<div class="main">
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet architecto blanditiis consequatur corporis
-    deleniti eos impedit magni, nostrum odit, quas suscipit! Ab ad dolores fugiat in iste omnis quod voluptatem. Ab
-    accusamus accusantium aliquid amet asperiores, assumenda autem blanditiis consectetur consequuntur cupiditate
-    debitis dignissimos dolor dolorum ducimus eligendi explicabo harum ipsam itaque laboriosam minus molestiae optio
-    perspiciatis placeat possimus provident quas quibusdam similique sunt suscipit tempora temporibus velit vitae
-    voluptatum! Ad amet commodi consectetur cum dignissimos dolor ducimus ex laboriosam libero, nam nemo nulla ratione
-    repellat sapiente sed similique, voluptate? Aperiam asperiores corporis cum, id incidunt, laborum nihil possimus
-    provident quas ratione reiciendis tempore voluptates? Architecto cumque dicta esse minima natus, nihil nisi nostrum
-    numquam optio? Ab deserunt fuga illo in nulla obcaecati optio quaerat, quia ut vero! Blanditiis debitis explicabo
-    minima nesciunt, omnis optio quasi ut? Deserunt explicabo in itaque nisi nobis, pariatur quod veniam? Ab est eum
-    exercitationem hic in laudantium natus neque obcaecati quia. Assumenda cupiditate deleniti dicta ea fugiat itaque
-    iusto maiores nostrum obcaecati placeat quae quia quod quos sed sit tempora voluptate, voluptatem. Adipisci amet aut
-    commodi consequatur corporis ducimus exercitationem illo impedit laudantium magnam maiores maxime minima molestiae
-    obcaecati odio officia omnis pariatur qui quia repellendus rerum sapiente sunt suscipit, temporibus velit. Deserunt
-    distinctio est eum facere fuga illum molestiae quam quas reprehenderit vitae? Asperiores dolorum fugiat fugit harum
-    magnam, optio quasi quisquam? A ad aperiam cupiditate error fuga fugit, ipsum minima neque porro quae quam quia rem
-    rerum sed similique! Consequuntur, incidunt obcaecati quidem recusandae rerum sunt suscipit veniam vero.
-    Consectetur, ex qui repudiandae saepe vel voluptate voluptatem. Blanditiis dolor ex excepturi exercitationem labore
-    provident quo quod tenetur voluptate voluptates! Amet aperiam, dignissimos doloribus impedit nam natus quos
-    reiciendis sunt! Autem commodi consequatur cupiditate debitis deserunt eaque eum ex incidunt laudantium libero
-    necessitatibus, non odio officia praesentium quam quas quia quidem repellendus reprehenderit temporibus totam ullam
-    vitae? Accusantium assumenda consectetur delectus doloremque dolores error et eum fugiat hic impedit incidunt iusto,
-    laboriosam nam nostrum omnis quaerat quia quibusdam reiciendis saepe sint suscipit tempore unde velit! Dolorem,
-    minima, possimus. Aliquam aliquid aspernatur aut autem eaque eos eum id itaque maiores minus nam necessitatibus,
-    nihil nisi pariatur placeat quo repellat repudiandae sequi, totam vel. Aperiam architecto beatae cupiditate debitis
-    eaque illo impedit incidunt laborum, molestiae nihil quas recusandae soluta. Aspernatur consectetur dolorum ducimus
-    ea eligendi enim est, et, fugiat illo in laudantium magni minus modi nobis, nostrum nulla officiis omnis quis quod
-    ratione repudiandae sequi tempora ut veniam voluptatum. At illo sint suscipit. Aliquam asperiores aspernatur at
-    blanditiis commodi consectetur dolorem earum esse, exercitationem inventore labore maiores, maxime minus nihil
-    omnis, reprehenderit sed sit voluptates! Eum inventore tempora vel veniam. Accusamus accusantium aliquam aperiam
-    eaque earum eos error ex exercitationem, explicabo facere id libero maxime minima mollitia nesciunt obcaecati
-    pariatur reprehenderit repudiandae rerum, sint sunt veritatis voluptatibus! Ad cupiditate dignissimos doloremque
-    earum maxime placeat quam saepe, sed suscipit voluptate! Beatae consequatur dignissimos eius est impedit itaque
-    labore, magni minima natus nesciunt, possimus praesentium, quia sunt voluptas voluptatem! Debitis eius facere in,
-    ipsam iste non? Alias asperiores aspernatur consequuntur cum deserunt distinctio doloribus earum enim esse
-    exercitationem expedita in magnam maiores minima nemo nesciunt nisi non quaerat quam quos reprehenderit rerum saepe
-    temporibus, totam, velit veritatis vero voluptatum. Animi aperiam assumenda commodi consequatur dicta dignissimos
-    doloribus ducimus eligendi eveniet excepturi exercitationem, facere illum ipsa ipsum modi molestiae nisi non
-    obcaecati perferendis quaerat quod recusandae reiciendis repellendus reprehenderit repudiandae sed sint tenetur ut
-    velit voluptatem! Consequatur dicta hic ipsum necessitatibus, non nostrum numquam officiis quam quas ratione,
-    repellat velit, veniam? Aperiam architecto dolorem doloribus ducimus enim expedita explicabo fugiat incidunt labore
-    nam nesciunt optio quaerat, quas quod rem tenetur voluptas. A aliquid asperiores, assumenda corporis debitis
-    distinctio dolor dolorum enim error facilis harum, impedit incidunt iusto minima perspiciatis reiciendis repellat
-    repellendus saepe sint sit tempora, tenetur ut vel vitae voluptatum. Accusantium aliquam cumque delectus enim eos
-    inventore ipsa natus ullam. Architecto deleniti dolor ea labore maxime neque porro repudiandae, saepe. Aliquam
-    aspernatur consequatur distinctio enim magnam magni minima quod recusandae rerum vitae. Ad debitis eius expedita, id
-    ipsam odit, possimus reiciendis sunt tempora tenetur totam voluptas! Asperiores aspernatur dicta dignissimos
-    dolores, doloribus dolorum, ea eligendi eveniet impedit inventore laudantium quibusdam veniam voluptate. Beatae
-    deserunt, dolores eaque et labore nulla officiis pariatur quod similique voluptas. Consectetur, cupiditate deleniti
-    eum excepturi exercitationem harum illo iste nemo nesciunt nostrum nulla numquam officia placeat praesentium qui
-    quos rerum saepe tempora unde vel velit vitae voluptas voluptates. Adipisci, amet, cupiditate dignissimos eius
-    error, harum impedit ratione recusandae reiciendis sit veritatis voluptatibus! A accusamus animi aperiam cupiditate
-    nemo non officiis quaerat quasi similique tempore temporibus, voluptatem voluptates? Amet deleniti dolorem ea
-    eligendi fugiat ipsa, laboriosam laudantium magnam maxime natus nesciunt numquam provident, quam rerum voluptas.
-    Amet animi, aut autem delectus itaque nobis optio quis. Ab consequuntur cumque cupiditate dicta eveniet modi
-    obcaecati quod repellat vel voluptatem! Consequatur eaque perspiciatis quae. Animi consequatur et ex officiis omnis
-    perferendis suscipit totam. Alias architecto, earum eius enim error excepturi fugiat impedit inventore nostrum odit
-    officiis perspiciatis quasi, sint, ut vel voluptate voluptatem. Accusantium deleniti dicta eos harum quia, tempora
-    vel voluptatibus voluptatum. A accusamus aliquid consequatur cupiditate debitis ducimus est et ex excepturi,
-    expedita impedit inventore iure magnam minus molestiae placeat possimus quam quibusdam, repellendus sed sit suscipit
-    voluptatem. Adipisci aperiam consectetur consequuntur corporis distinctio ducimus earum error est et, eveniet
-    excepturi id incidunt iusto labore laboriosam, laborum magnam maxime modi nostrum optio pariatur placeat possimus
-    provident quae quam quibusdam quis, quo repellendus sapiente sequi totam ullam unde vitae? Alias aliquam eius
-    facilis mollitia officiis quis sint? In, natus, odit. At aut blanditiis magni maxime possimus praesentium ratione
-    ut. Id inventore modi natus nobis porro? Accusamus animi asperiores assumenda, atque aut consequatur deleniti dicta
-    distinctio doloremque eaque eos, error esse exercitationem facere illum impedit ipsum laborum magnam maiores maxime
-    molestias nemo nihil perspiciatis porro praesentium quasi quibusdam quod, sapiente similique vero. A, atque
-    consectetur eaque explicabo numquam tenetur ut! Doloribus facilis fugiat libero quaerat ut.
-  </p>
+<div class="home-content">
+  <div class="home-header">
+    <div class="card-area">
+      <h2>Vouchers</h2>
+      <hr>
+      <div class="card-content">
+        <div class="item">
+          <span class="item-title">Active</span>
+          <span class="item-info">20</span>
+        </div>
+        <div class="item">
+          <span class="item-title">Expired</span>
+          <span class="item-info">10</span>
+        </div>
+      </div>
+    </div>
+    <div class="card-area">
+      <h2>Products</h2>
+      <hr>
+      <div class="card-content">
+        <div class="item">
+          <span class="item-title">In Stock</span>
+          <span class="item-info">20</span>
+        </div>
+        <div class="item">
+          <span class="item-title">Out of Stock</span>
+          <span class="item-info">10</span>
+        </div>
+        <div class="item">
+          <span class="item-title">Totals</span>
+          <span class="item-info">30</span>
+        </div>
+      </div>
+    </div>
+    <div class="card-area">
+      <h2>Promotions (Active)</h2>
+      <hr>
+      <div class="card-content">
+        <div class="item">
+          <span class="item-title">Brand</span>
+          <span class="item-info">20</span>
+        </div>
+        <div class="item">
+          <span class="item-title">Category</span>
+          <span class="item-info">10</span>
+        </div>
+        <div class="item">
+          <span class="item-title">Product</span>
+          <span class="item-info">30</span>
+        </div>
+      </div>
+    </div>
+    <div class="card-area">
+      <h2>Revenue</h2>
+      <hr>
+      <div class="card-content">
+        <div class="item">
+          <span class="item-title">Today</span>
+          <span class="item-info">{{20 | currency}}</span>
+        </div>
+        <div class="item">
+          <span class="item-title">This Week</span>
+          <span class="item-info">{{150 | currency}}</span>
+        </div>
+        <div class="item">
+          <span class="item-title">This Month</span>
+          <span class="item-info">{{300 | currency}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
