--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -16,7 +16,7 @@
     overflow-y: scroll;
   }
 
-  .sidebar-min, .collapse {
+  .sidebar-min {
     width: 5rem;
     background-image: linear-gradient(235deg, #565867, #191a25);
     transition: opacity 1s ease-out;
