--- a/src/app/shared/table-pager/table-pager.component.html
+++ b/src/app/shared/table-pager/table-pager.component.html
@@ -1,3 +1,3 @@
 <div class="pager-content">
-  <span>Showing Page {{pageNo}} of {{totalPages}}</span>
+  <span>Showing {{totalCount}} Items of Page {{pageNo}} of {{totalPages}} Page(s)</span>
 </div>
