--- a/src/styles.scss
+++ b/src/styles.scss
@@ -137,7 +137,6 @@ td, th {
 
 .header {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  //padding: 1rem;
   display: flex;
   width: 100%;
   align-items: center;
@@ -231,5 +230,21 @@ td, th {
   select{
     padding: 1rem;
     border-radius: .3rem;
+  }
+}
+
+.type-content{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  label{
+    margin: .6rem 0;
+  }
+
+  select{
+    padding: 1rem;
+    border-radius: .3rem;
+    width: 100%;
   }
 }
