--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,20 +10,22 @@
     </div>
     <div class="nav-center"></div>
     <div class="nav-right">
-      <div class="action-icon" (click)="showAction()">
-        <fa-icon [icon]="accountIcon" class="fa-xl"></fa-icon>
+      <div class="action-icon">
+        <span>{{(user$ | async)?.name}}</span>
+        <fa-icon [icon]="accountIcon" class="fa-xl" (click)="showAction()"></fa-icon>
       </div>
       <div class="account-action" *ngIf="isShown">
-        <h4 style="text-align: center">SignedIn as:</h4>
-        <hr>
-        <p style="font-weight: bold">
+        <div class="action-info">
           <fa-icon [icon]="user" class="fa-xl"></fa-icon>
-          {{(user$ | async)?.name}}
-        </p>
-        <p style="color: #007bff;text-decoration: underline;">
-          <fa-icon [icon]="email" class="fa-xl"></fa-icon>
-          {{(user$ | async)?.email}}
-        </p>
+          <span>
+            <p style="font-weight: bold">
+            {{(user$ | async)?.name}}
+          </p>
+          <p style="color: #007bff;text-decoration: underline;">
+            {{(user$ | async)?.email}}
+          </p>
+          </span>
+        </div>
         <hr>
         <p class="sign-out" (click)="signOutUser()">
           <fa-icon [icon]="signOut" class="fa-xl"></fa-icon>
