--- a/src/app/management/group/group.component.html
+++ b/src/app/management/group/group.component.html
@@ -14,6 +14,7 @@
       <table>
         <thead>
         <tr>
+          <th>#</th>
           <th style="width: 15rem">Name</th>
           <th style="width: 10rem">Slug</th>
           <th style="width: 30rem; min-width: 20rem">Description</th>
@@ -24,7 +25,8 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let group of pagedList?.items">
+        <tr *ngFor="let group of pagedList?.items; let i = index">
+          <td>{{i + 1}}</td>
           <td>{{group.name}}</td>
           <td>{{group.slug}}</td>
           <td>{{group.description}}</td>
