--- a/src/styles.scss
+++ b/src/styles.scss
@@ -126,12 +126,25 @@ td, th {
   border: 1px solid #ccc;
   text-align: left;
   font-size: 1rem;
-  min-width: 9rem;
 
-  &:last-child, &:first-child, &:nth-last-child(2) {
+  &:not(:first-child) {
+    min-width: 9rem;
+  }
+
+  &:first-child {
+    width: 4rem !important;
+    max-width: 4rem !important;
+    min-width: 4rem !important;
+  }
+
+  &:last-child, &:nth-child(2), &:nth-last-child(2) {
     min-width: 14rem;
     width: 14rem;
     max-width: 14rem;
+  }
+
+  &:last-child{
+    text-align: center;
   }
 }
 
@@ -223,26 +236,26 @@ td, th {
   flex-direction: column;
   margin-top: .6rem;
 
-  label{
+  label {
     margin: .6rem 0;
   }
 
-  select{
+  select {
     padding: 1rem;
     border-radius: .3rem;
   }
 }
 
-.type-content{
+.type-content {
   display: flex;
   flex-direction: column;
   width: 100%;
 
-  label{
+  label {
     margin: .6rem 0;
   }
 
-  select{
+  select {
     padding: 1rem;
     border-radius: .3rem;
     width: 100%;
