--- a/src/app/shared/text-area/text-area.component.html
+++ b/src/app/shared/text-area/text-area.component.html
@@ -1,8 +1,8 @@
 <div class="description-area">
   <label for='{{label}}'>{{label}}</label>
-  <textarea name="{{label}}" id="{{label}}" cols="{{cols}}" rows="{{rows}}" placeholder="{{label}}"
-            (blur)="onTouched()" [minLength]="minLength" #description
-            (input)="onChange($any($event.currentTarget).value)"></textarea>
+  <textarea name="{{label}}" id="{{label}}" cols="{{cols}}" rows="{{rows}}" placeholder="{{label}}" (blur)="onTouched()"
+            [minLength]="minLength" #description (input)="onChange($any($event.currentTarget).value)">
+  </textarea>
   <small class='text-error'
          *ngIf='(controlDir && controlDir.control && !controlDir.control.valid && controlDir.control.touched)'>
     <span *ngIf="controlDir.control.errors?.['required']">*{{label}} is required</span>
