--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', 'sans-serif';
+  font-family: 'Open Sans', 'sans-serif', 'Arial';
   font-size: 14px;
   margin: 0;
   padding: 0;
@@ -52,7 +52,7 @@ button {
   line-height: 1.5;
   border-radius: .25rem;
   text-overflow: ellipsis;
-  color: #fff;
+  //color: #fff;
   overflow: hidden;
   min-width: 4.5rem !important;
   transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
@@ -70,16 +70,19 @@ button {
 .btn-success {
   background-color: #28a745;
   border-color: #28a745;
+  color: #fff;
 }
 
 .btn-primary {
   background-color: #007bff;
   border-color: #007bff;
+  color: #fff;
 }
 
 .btn-error {
   background-color: #dc3545;
   border-color: #dc3545;
+  color: #fff;
 }
 
 .btn-warn {
@@ -264,4 +267,12 @@ td, th {
     border-radius: .3rem;
     width: 100%;
   }
+}
+
+.ql-toolbar.ql-snow {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border: 1px solid #212121!important;
+  border-bottom: none!important;
+  padding: .6rem!important;
 }
